--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.15",
     "morgan": "~1.9.0",
+    "npm": "^6.4.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
